Yield + GAV on home page

--- a/app/views/search.pug
+++ b/app/views/search.pug
@@ -17,6 +17,7 @@ block content
             input(id="quantity", type="number", name="quantity", placeholder="Quantity")
             button(id="buy") Buy
             button(id="sell") Sell
+            div#message
             div#price-container 
                 h1#price
                 h3#change-price 
