--- a/app/views/base_layout.pug
+++ b/app/views/base_layout.pug
@@ -6,8 +6,9 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     //- Bootstrap CSS
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js") 
     block style
-    title Document
+    title Fantasy Stocks
   body 
     nav(class="navbar navbar-expand-lg navbar-light bg-ligth")
       a(class="navbar-brand", href="#")
