--- a/app/views/base_layout.pug
+++ b/app/views/base_layout.pug
@@ -21,12 +21,19 @@ html(lang="en")
           li(class="nav-item")
             a(class="nav-link" href="#") Link
           li(class="nav-item dropdown")
-            a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Dropdown
+            a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Portfolios
             div(class="dropdown-menu" aria-labelledby="navbarDropdown")
-              a(class="dropdown-item" href="#") Action1
-              a(class="dropdown-item" href="#") Action2
+              a(class="dropdown-item" href="#") Portfolio 1
+              a(class="dropdown-item" href="#") Portfolio 2
               div(class="dropdown-divider")
-              a(class="dropdown-item" href="#") Action3
+              a(class="dropdown-item" href="#") Create new portfolio
+          li(class="nav-item dropdown")
+            a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Games
+            div(class="dropdown-menu" aria-labelledby="navbarDropdown")
+              a(class="dropdown-item" href="#") Game 1
+              a(class="dropdown-item" href="#") Game 2
+              div(class="dropdown-divider")
+              a(class="dropdown-item" href="#") Create new game
           li(class="nav-item")
             a(class="nav-link" href="/user/logout") Sign out
           li(class="nav-item")
