--- a/app/views/base_layout.pug
+++ b/app/views/base_layout.pug
@@ -20,7 +20,7 @@ html(lang="en")
             a(class="nav-link" href="#") #{test}
               span(class="sr-only") (current)
           li(class="nav-item")
-            a(class="nav-link" href="/index.html") Home Page
+            a(class="nav-link" href="/") Home Page
           li(class="nav-item dropdown")
             a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Portfolios
             div(class="dropdown-menu" aria-labelledby="navbarDropdown")
