--- a/app/views/base_layout.pug
+++ b/app/views/base_layout.pug
@@ -17,17 +17,19 @@ html(lang="en")
       div#navbarSupportedContent(class="collapse navbar-collapse")
         ul(class="navbar-nav mr-auto")
           li(class="nav-item active")
-            a(class="nav-link" href="#") #{test}
+            a(class="nav-link" href="/") #{user}
               span(class="sr-only") (current)
           li(class="nav-item")
-            a(class="nav-link" href="/") Home Page
-          li(class="nav-item dropdown")
-            a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Portfolios
-            div(class="dropdown-menu" aria-labelledby="navbarDropdown")
-              a(class="dropdown-item" href="#") Portfolio 1
-              a(class="dropdown-item" href="#") Portfolio 2
-              div(class="dropdown-divider")
-              a(class="dropdown-item" href="#") Create new portfolio
+            a(class="nav-link" href="#") Link
+          if portfolios
+            li(class="nav-item dropdown")
+              a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Portfolios
+              div(class="dropdown-menu" aria-labelledby="navbarDropdown")
+                each portfolio in portfolios
+                  a(class="dropdown-item" href=`/portfolio/${portfolio.portfolio_id}`)= portfolio.name
+                div(class="dropdown-divider")
+                a(class="dropdown-item" href="#") Create new portfolio
+
           li(class="nav-item dropdown")
             a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Games
             div(class="dropdown-menu" aria-labelledby="navbarDropdown")
