--- a/app/views/base_layout.pug
+++ b/app/views/base_layout.pug
@@ -7,6 +7,7 @@ html(lang="en")
     //- Bootstrap CSS
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js") 
+    block scripts
     block style
     title Fantasy Stocks
   body 
@@ -17,7 +18,7 @@ html(lang="en")
       div#navbarSupportedContent(class="collapse navbar-collapse")
         ul(class="navbar-nav mr-auto")
           li(class="nav-item active")
-            a(class="nav-link" href="/") #{user}
+            a(class="nav-link" href="/") Home
               span(class="sr-only") (current)
           li(class="nav-item")
             a(class="nav-link" href="#") Link
