--- a/app/views/create_games.pug
+++ b/app/views/create_games.pug
@@ -4,6 +4,8 @@ block scripts
 
 block content
     div(class="row h-100 justify-content-center align-items-center")
+        h2 Create a new Game
+    div(class="row h-100 justify-content-center align-items-center")
         form(action='/game/create' method='post')
             ul#fieldList
                 li
@@ -27,4 +29,3 @@ block content
             }
 
     script(src="/scripts/games.js") 
-    
