--- a/app/views/search_bootstrap.pug
+++ b/app/views/search_bootstrap.pug
@@ -30,12 +30,12 @@ block content
                 span(aria-hidden="true") &times;
             div(class="modal-body")
               div(class="form-group")
-                div(class="form-group")
-                  label(for="portfolioBuy") Portfolio
+                label(for="portfolioBuy") Portfolio
                   select#exampleFormControlSelect1.form-control
                     if user.portfolios
                       each portfolio, portfolio_id in user.portfolios
                         option(value=`/portfolio/${portfolio_id}`) #{portfolio.name}
+                    br
                     label(for="quantityBuy") Quantity
                     input#quantityBuy(type="number" class="form-control" name="quantityBuy" value="0" min="1" oninput="calculateTotalBuy()" required)
                     h2#totalPriceBuy(class="pt-2")
@@ -53,6 +53,12 @@ block content
                 span(aria-hidden="true") &times;
             div(class="modal-body")
               div(class="form-group")
+                label(for="portfolioBuy") Portfolio
+                  select#exampleFormControlSelect1.form-control
+                    if user.portfolios
+                      each portfolio, portfolio_id in user.portfolios
+                        option(value=`/portfolio/${portfolio_id}`) #{portfolio.name}
+                br
                 label(for="quantitySell") Quantity
                 input#quantitySell(type="number" class="form-control" name="quantitySell" value="0" min="1" oninput="calculateTotalSell()" required)
                 h2#totalPriceSell(class="pt-2")
