--- a/app/views/create_games.pug
+++ b/app/views/create_games.pug
@@ -6,15 +6,17 @@ block content
     .text-center
       form(class="form-signin", action='/game/create' method='POST')
         h2 Create a new Game
+          div#container(width=10px)
             .col-xs-2 
-                input#name(type="text", name="name", class="form-control", placeholder="Name" required autofocus)
-                input#cash(type="text", name="cash", class="form-control", placeholder="Starting Cash" required autofocus)
-                input#users(type="text", name="users[]", class="form-control", placeholder="User Name" required autofocus)
-                ul#fieldList
-                br
-                button#addMore(class="btn btn-lg btn-primary btn-block") Add more users
-                br
-                button#createGame(type='submit', class="btn btn-lg btn-primary btn-block") Create Game
+              input#name(type="text", name="name", class="form-control", placeholder="Name" required autofocus)
+              input#cash(type="text", name="cash", class="form-control", placeholder="Starting Cash" required autofocus)
+              input#date(type="date", name="date", class="form-control", placeholder="Select Ending Date" required autofocus)
+              input#users(type="text", name="users[]", class="form-control", placeholder="User Name" required autofocus)
+              ul#fieldList
+              br
+              button#addMore(class="btn btn-outline-secondary") Add more users
+              br
+              button#createGame(type='submit', class="btn btn-outline-primary") Create Game
         style.
             ul {
             padding: 0;
