--- a/app/views/create_games.pug
+++ b/app/views/create_games.pug
@@ -6,17 +6,18 @@ block content
     .text-center
       form(class="form-signin", action='/game/create' method='POST')
         h2 Create a new Game
-          div#container(width=10px)
-            .col-xs-2 
-              input#name(type="text", name="name", class="form-control", placeholder="Name" required autofocus)
-              input#cash(type="text", name="cash", class="form-control", placeholder="Starting Cash" required autofocus)
-              input#date(type="date", name="date", class="form-control", placeholder="Select Ending Date" required autofocus)
-              input#users(type="text", name="users[]", class="form-control", placeholder="User Name" required autofocus)
-              ul#fieldList
-              br
-              button#addMore(class="btn btn-outline-secondary") Add more users
-              br
-              button#createGame(type='submit', class="btn btn-outline-primary") Create Game
+        div
+          div(class="container")
+            input#name(type="text", name="name", class="form-control", placeholder="Name" required autofocus)
+            input#cash(type="text", name="cash", class="form-control", placeholder="Starting Cash" required autofocus)
+            input#date(name="date", placeholder="Enter End Date", class="form-control", type="text", onfocus="(this.type = 'date')")
+            input#users(type="text", name="users[]", class="form-control", placeholder="User Name" required autofocus)
+            ul#fieldList
+            br
+            button#addMore(class="btn btn-outline-secondary") Add more users
+            br
+            br
+            button#createGame(type='submit', class="btn btn-outline-primary") Create Game
         style.
             ul {
             padding: 0;
@@ -24,6 +25,9 @@ block content
             }
             ul li {
             list-style: none;
+            }
+            .container {
+              width: 350px;
             }
 
     script(src="/scripts/games.js") 
