--- a/app/views/portfolio.pug
+++ b/app/views/portfolio.pug
@@ -53,5 +53,5 @@ block content
     totalValue.textContent = `Total value: ${dollarUS.format(parseFloat(totalValue.textContent.slice(13)))}`;
     
     let cash = document.getElementById('cash');
-    console.log(cash.textContent.slice(15));
+    //console.log(cash.textContent.slice(15));
     cash.textContent = `Available cash: ${dollarUS.format(parseFloat(cash.textContent.slice(15)))}`;
